# pancake

./: .gitignore  CHANGELOG.md  Makefile  README.md  bamboo_build.sh  bamboo_build_gpu.sh  meson.build  meson_options.txt
include/: meson.build
include/lib/: math.hpp
include/lib/flat_hash_map/: bytell_hash_map.hpp  flat_hash_map.hpp  unordered_map.hpp
include/lib/intervaltree/: IntervalTree.h
include/lib/istl/: fenwick.hpp  lcs.hpp  lis.hpp  range_tools.hpp
include/lib/sparsehash/internal/: sparsehashtable.h
include/lib/sparsehash/sparsehash/: type_traits.h
include/pacbio/alignment/: Ses2AlignBanded.hpp  Ses2DistanceBanded.hpp  SesAlignBanded.hpp  SesDistanceBanded.h  SesResults.h
include/pacbio/overlaphifi/: OverlapHifiSettings.h
include/pacbio/pancake/: AlignerBatchBase.h  AlignerBatchCPU.h  AlignerBatchFPGA.h  AlignerBatchGPU.h  AlignerBatchGPUGenomeWorksKSW2.h  AlignerKSW2.h  DPChain.h  DPChainSimd.h  FastaSequenceCached.h  MapperBase.h  MapperBatchCPU.h  MapperBatchFPGA.h  MapperBatchGPU.h  MapperBatchGPUGenomeWorksKSW2.h  MapperBatchUtility.h  MapperCLR.h  MapperHiFi.h  MapperUtility.h  Minimizers.h  Overlap.h  OverlapWriterFactory.h  OverlapWriterFormat.h  Seed.h  SeedDBIndexCache.h  SeedHit.h  SeedHitWriter.h  SeedIndex.h  SeqDBIndexCache.h  SequenceSeeds.h
include/pacbio/util/: DebugTools.h  GenomicUnit.h  Util.h
include/pancake/: AdapterFinder.hpp  AlignerBase.hpp  AlignerBatchBase.hpp  AlignerBatchCPU.hpp  AlignerBatchGPU.hpp  AlignerBatchGPUEdelweiss.hpp  AlignerBatchGPUGenomeWorksInterface.hpp  AlignerEdlib.hpp  AlignerFactory.hpp  AlignerKSW2.hpp  AlignerSES1.hpp  AlignerSES2.hpp  AlignmentParameters.hpp  AlignmentRegion.hpp  AlignmentResult.hpp  AlignmentSeeded.hpp  AlignmentTools.hpp  BurstExcision.hpp  CCSAlignmentResult.hpp  CompressedSequence.hpp  ContiguousFilePart.hpp  DPChain.hpp  DPChainSimd.hpp  DiffCounts.hpp  FastaSequenceCached.hpp  FastaSequenceCachedStore.hpp  FastaSequenceId.hpp  LibraryInfo.hpp  Lookups.hpp  MapperBase.hpp  MapperBatchBase.hpp  MapperBatchCPU.hpp  MapperBatchGPU.hpp  MapperBatchGPUEdelweiss.hpp  MapperBatchGPUUtility.hpp  MapperBatchUtility.hpp  MapperCLR.hpp  MapperCLRSettings.hpp  MapperHiFi.hpp  MapperUtility.hpp  (+40 more)
include/pancake/util/: CommonTypes.hpp  Conversion.hpp  DebugTools.hpp  FileIO.hpp  GenomicUnit.hpp  Math.hpp  RunLengthEncoding.hpp  SeqLengthStats.hpp  TicToc.hpp  Util.hpp
tests/: meson.build
tests/cram/: hifi_ovl.t  hifi_ovl_mapping.t  hifi_ovl_multiple_hits_per_target.t  map_clr.t  seqdb_filter.t  seqdb_writer.t  seqfetch.t  test_bugfixes.t  test_hifi_ovl.t  test_hifi_ovl_mapping.t  test_hifi_ovl_multiple_hits_per_target.t  test_map_clr.t  test_robustness.t  test_seeddb_writer.t  test_seqdb_dump.t  test_seqdb_filter.t  test_seqdb_info.t  test_seqdb_writer.t
tests/data/adapter-finder/: README.md
tests/data/adapter-finder/difficult-positives/: test.01.difficult_antidiag.m64011_190228_190319-4064355-152070_168593.fasta
tests/data/adapter-finder/false-positives/: test.01.false_positive_subread.fasta  test.01.false_positive_subread.revcmp.fasta
tests/data/adapter-finder/synthetic/: test.01.5000bp-fwd_adapter-5000bp_palindrome.fasta  test.02.5000bp-rev_adapter-5000bp_palindrome.fasta  test.03.5000bp-fwd_adapter-3000bp_palindrome.fasta  test.04.5000bp-fwd_adapter-5000bp-rev_adapter-3000bp.fasta  test.05.5000bp-no_adapter-5000bp.fasta  test.06.5000bp-no_adapter-3000bp.fasta
tests/data/adapter-finder/true-negatives/: test.01.large_lowcomplx_burst.no_missed_adapter.m64011_190228_190319-4064242-129443_157132.fasta  test.02.large_burst.m64011_190228_190319-4064060-62759_75317.fasta  test.03.low_complexity.m64011_190228_190319-4064386-5811_11729.fasta
tests/data/adapter-finder/true-positives/: test.01.missed_adapter.good_antidiag.m64011_190228_190319-4064130-208993_227621.fasta  test.02.missed_adapter.good_antitiag.m64011_190228_190319-4064055-202294_220031.fasta  test.03.missed_adapter.good_antitiag.m64011_190228_190319-4064055-131140_149079.fasta  test.04.missed_adapter.weak_antidiag.m64011_190228_190319-4063950-161516_179997.fasta  (+3 more)
tests/data/bugfixes/empty-seqdb/: README.md
tests/data/bursts/: test-1-zmw-without-bursts.bam  test-2-zmw-with-one-subread-having-two-bursts.bam
tests/data/mapper-clr/: test-10-low_complexity_read-target-m64004_191221_060015-1441-134152_156483.read_0.fasta  test-11-normal-pair.query.fasta  test-11-normal-pair.target.fasta  test-12-lowercase_base_in_target.query.fasta  test-12-lowercase_base_in_target.target.fasta
tests/data/seqdb-writer/: in.fasta.fai  test-12-compress.fasta
tests/src/: test_AlignerBatchGPUGenomeWorksKSW2.cpp  test_AlignmentTools.cpp  test_DPChain.cpp  test_DPChainSimd.cpp  test_FileIO.cpp  test_LCS.cpp  test_LIS.cpp  test_MapperBatchCPU.cpp  test_MapperBatchGPU.cpp  test_MapperBatchGPUGenomeWorksKSW2.cpp  test_MapperCLR.cpp  test_MapperUtility.cpp  test_Minimizers.cpp  test_RangeTools.cpp  test_RunLengthEncoding.cpp  test_SeedDBReaderRawBlock.cpp  test_SeedIndex.cpp  test_SeqDBReaderCachedBlock.cpp  test_Ses2AlignBanded.cpp  test_Ses2DistanceBanded.cpp  test_Twobit.cpp
tests/unit/: TestHelperUtils.cpp  TestHelperUtils.h  TestHelperUtils.hpp  test_AdapterFinder.cpp  test_AlignerBatchCPU.cpp  test_AlignerBatchGPU.cpp  test_AlignerBatchGPUEdelweiss.cpp  test_AlignmentSeeded.cpp  test_AlignmentTools.cpp  test_BurstExcision.cpp  test_DPChain.cpp  test_DPChainSimd.cpp  test_FastaSequenceCachedStore.cpp  test_FileIO.cpp  test_LCS.cpp  test_LIS.cpp  test_MapperBatchCPU.cpp  test_MapperBatchGPU.cpp  test_MapperBatchGPUEdelweiss.cpp  test_MapperCLR.cpp  test_MapperHiFi.cpp  test_MapperUtility.cpp  test_Minimizers.cpp  test_Overlap.cpp  test_Pancake.cpp  test_RangeTools.cpp  test_RunLengthEncoding.cpp  test_Secondary.cpp  test_SeedDBReader.cpp  test_SeedDBReaderCached.cpp  test_SeedDBReaderCachedBlock.cpp  test_SeedDBReaderRawBlock.cpp  test_SeedIndex.cpp  test_SeqDBReader.cpp  test_SeqDBReaderCached.cpp  test_SeqDBReaderCachedBlock.cpp  test_Ses2AlignBanded.cpp  test_Ses2DistanceBanded.cpp  test_SesAlignBanded.cpp  test_SesDistanceBanded.cpp  (+2 more)
(+162 files in other folders)
