option('tests', type : 'boolean', value : true,  description : 'Enable dependencies required for testing')
option('gpu-cuda', type : 'boolean', value : false,  description : 'Compile the CUDA code.')
option('fpga', type : 'boolean', value : false,  description : 'Compile the FPGA code.')
option('timings', type : 'boolean', value : false,  description : 'Activate timings.')
