option('tests', type : 'boolean', value : true,  description : 'Enable dependencies required for testing')
option('gpu-cuda', type : 'boolean', value : false,  description : 'Compile the Edelweiss CUDA code.')
option('gpu-cuda-gw', type : 'boolean', value : false,  description : 'Compile the GenomeWorks CUDA code.')
option('time', type : 'boolean', value : false,  description : 'Compile with the time profiling feature for the mappers.')
option('sse41', type : 'boolean', value : false,  description : 'Use SSE for DP chaining.')
